# drawer2

./: .gitignore  README.md  intellij_shortcuts_mac_tdd.docx  intellij_shortcuts_mac_tdd.md
Bash/: README.md  bash-syntax-reference.sh
BusinessSetup/: business_strategy.md  marketing_channels.md  startup_reach.md
Git/: git.pull.md  git.reabse.flow.md  git.rebase.md  git.restore.md
HelmChart/: README.md
Intellij_Idea_IDE/: daily_routine_flow.md  daily_routine_flow_practice.md  ide_navigation_no_mouse.md  intellij_shortcuts_code-generation-templates.md  intellij_shortcuts_linux_amazon_workspace_tdd.md  intellij_shortcuts_mac_tdd.md  intellij_shortcuts_windows11_tdd.md
JavaTechLead/: 003-principles-for-daily-software-delivery-practice.md  005-how-should-business-analysis-be-conducted-on-software-implementation-delivery.md
Jenkins/: docker-compose.yml
Kafka/: apache_kafka_runtime_components_execution_concepts.md  kafka_streaming_app_showcase.md
Liquibase/: README.md  docker-compose.yml
Microservices/: cqrs_and_event_sourcing_patterns_java21.md  microservices_design_patterns_list.md  microservices_monitoring_logging_methods_and_tools.md  microservices_monitoring_logging_mindmap_compact.mmd  microservices_security_methods_apis_libraries_tools.md  reactive_frameworks_and_event_driven_design_in_microservices.md
Monitoring/: docker-compose.yml  exercise.md
ReactJs/: architecture.md  best_practice.md  css_with_react.md  javascript_ES6.md  javascript_ES6_for_reactjs.md  overview.md  react_dependencies.md  state_management.md  typescript_for_js.md  typescript_showcase.md  vscode_setup.md
Spark/: apache_spark_runtime_overview.md  rdds_vs_dataframes_datasets_detailed.md  spark_scala2_sample_app.md
Springboot/: SPRINGBOOT_CONFIGURATION_OVERVIEW.md  SPRINGBOOT_OVERVIEW.md  SPRINGBOOT_SECURITY_OVERVIEW.md  SPRINGWEBFLUX_OVERVIEW.md  springboot_observability_monitoring_tracing_tools.md  springboot_rest_api_microservice_modules.md  springboot_security_overview.md
TeamLead/: delivery-efficiency.md  resolving_conflict_and_making_technical_tradeoffs.md  team_lead_role_in_software_development.md
Terraform/: showcase.md
python/Apps/LoggingExample/: .gitignore  README.md  event.json  lambda_function.py  pyproject.toml
python/Apps/LoggingExample/app/: __init__.py
python/Apps/LoggingExample/app/handlers/: __init__.py  order_handler.py
python/Apps/LoggingExample/app/models/: __init__.py  order.py  recommendation.py
python/Apps/LoggingExample/app/services/: __init__.py  inventory_service.py  notification_service.py
python/Apps/LoggingExample/app/utils/: __init__.py  parsers.py  response.py
python/Features/sample/: .gitignore  Makefile  README.md  pyproject.toml
python/Features/sample/src/sample_app/: __init__.py  cli.py  core.py
python/Features/sample/tests/: test_cli.py  test_core.py
(+694 files in other folders)
